Fix: realign artists' avatar and name

--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -91,12 +91,15 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
 
-    display: block;
     text-decoration: none;
     color: inherit;
+
+    display: flex;
+    align-items: center;
   }
 
   .artwork-thumbnail-artist-avatar {
+    margin-right: 5px;
     width: 24px;
     height: 24px;
     object-position: center top;
@@ -166,10 +169,16 @@ body {
     }
   }
 
-  .artwork-artist-avatar {
-    width: 50px;
-    height: 50px;
-    object-position: center top;
+  .artwork-artist {
+    display: flex;
+    align-items: center;
+
+    .artwork-artist-avatar {
+      margin-right: 8px;
+      width: 50px;
+      height: 50px;
+      object-position: center top;
+    }
   }
 
   .artwork-images {
